# edisch

./: Cargo.toml  README  README.md
src/: args.rs  bulk_edit.rs  error.rs  main.rs
