[package]
name = "edisch"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4.5.7"
console = "0.15.8"
dialoguer = "0.11.0"
regex = "1.10.5"
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
unicode-width = "0.1.13"
