[package]
name = "edisch"
version = "0.2.0"
edition = "2021"
authors = ["gw31415 <git@amas.dev>"]
description = "Tool to change Discord channel names in bulk with your $EDITOR"
license = "Apache-2.0"
repository = "https://github.com/gw31415/edisch"
categories = ["command-line-interface"]
keywords = ["cli", "vim", "discord", "text-editor"]

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4.5.7"
console = "0.15.8"
dialoguer = "0.11.0"
regex = "1.10.5"
scopeguard = "1.2.0"
serenity = "0.12.2"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
unicode-width = "0.1.13"
